# eCP

./: .gitignore  CONTRIBUTING.md  README.md  generate_wrapper.txt  setup_all_mskk.sh  setup_complete.sh  setup_complete.txt  setup_ecp_mskk.sh  setup_minimal.sh  setup_minimal.txt
ann-benchmarks/: .travis.yml  algos.yaml
ann-benchmarks/ann_benchmarks/algorithms/: eCP.py
ann-benchmarks/install/: Dockerfile.ecp  Dockerfile.ecp-org
benchmarks-files/: Dockerfile.ecp  algos.yaml  eCP.py
deprecated/: run_mskk.sh
deprecated/windows_related_build_files/: eCP.vcxproj  eCP_application.vcxproj
eCP/: .clang-format  CMakeLists.txt  Makefile  eCP.sln
eCP/app/: CMakeLists.txt  main.cpp  utility.cpp  utility.hpp
eCP/eCP/: data_structure.hpp  distance.cpp  eCP.cpp  eCP.hpp  eCP.vcxproj.filters  file_combine.py  pre-processing.cpp  pre-processing.hpp  query-processing.cpp  query-processing.hpp
eCP/eCPTests/: distance_tests.cpp  eCPTests.vcxproj  eCPTests.vcxproj.filters  eCP_tests.cpp  pre-processing_tests.cpp  query-processing_tests.cpp
eCP/eCP_application/: eCP_application.cpp  eCP_application.vcxproj.filters  utility.cpp  utility.hpp
eCP/include/eCP/: data_structure.hpp  distance.hpp  eCP.hpp  global.hpp  globals.hpp  pre-processing.hpp  query-processing.hpp
eCP/include/eCP/debugging/: debug_tools.hpp
eCP/include/eCP/index/: data_structure.hpp  eCP.hpp  query-processing.hpp
eCP/include/eCP/utilities/: utilities.hpp  utility.hpp
eCP/main/: CMakeLists.txt  main.cpp
eCP/scripts/: build.sh  configure.sh  main_run.sh  tests_run.sh
eCP/src/: CMakeLists.txt  distance.cpp  eCP.cpp  global.cpp  globals.cpp  pre-processing.cpp  query-processing.cpp
eCP/src/eCP/debugging/: debug_tools.cpp  debug_tools.hpp
eCP/src/eCP/index/: distance.cpp  distance.hpp  eCP.cpp  globals.cpp  pre-processing.cpp  pre-processing.hpp  query-processing.cpp  query-processing.hpp
eCP/src/eCP/index/shared/: data_structure.cpp  data_structure.hpp  distance.cpp  distance.hpp  globals.cpp  globals.hpp
eCP/src/eCP/utilities/: utilities.cpp  utilities.hpp  utility.cpp
eCP/src/eCP/utilities/H5Easy/: H5Easy.h
eCP/swig/: CMakeLists.txt  eCP.i
eCP/tests/: CMakeLists.txt  distance_tests.cpp  eCP_tests.cpp  pch.cpp  pre-processing_tests.cpp  query-processing_tests.cpp  testhelpers.cpp  testhelpers.hpp  testhelpers_tests.cpp  utilities_tests.cpp
eCP/tests/helpers/: testhelpers.cpp  testhelpers.hpp  testhelpers_tests.cpp
results/frem/: BallTree(nmslib).html  NGT-panng.html  SW-graph(nmslib).html  annoy.html  bruteforce-blas.html  eCP.html  faiss-ivf.html  flann.html  glove-25-angular_10_angular.html  hnsw(faiss).html  hnsw(nmslib).html  hnswlib.html  index.html  kgraph.html  mrpt.html  n2.html  sift-128-euclidean_10_euclidean.html
results/frem/glove-25-angular/10/eCP_1_1/: angular_1_1  angular_1_2  angular_1_3  angular_1_4  angular_1_5  angular_2_1  angular_2_2  angular_2_3  angular_2_4  angular_2_5  angular_3_1  angular_3_2  angular_3_3  angular_3_4  angular_3_5  angular_4_1  angular_4_2  angular_4_3  angular_4_4  angular_4_5  angular_5_1  angular_5_2  angular_5_3  angular_5_4  angular_5_5
results/frem/glove-25-angular/10/eCP_1_2/: angular_1_1  angular_1_2  angular_1_3  angular_1_4  angular_1_5  angular_2_1  angular_2_2  angular_2_3  angular_2_4  angular_2_5  angular_3_1  angular_3_2  angular_3_3  angular_3_4  angular_3_5  angular_4_1  angular_4_2  angular_4_3  angular_4_4  angular_4_5  angular_5_1  angular_5_2  angular_5_3  angular_5_4  angular_5_5
results/frem/glove-25-angular/10/eCP_1_3/: angular_1_1  angular_1_2  angular_1_3  angular_1_4  angular_1_5  angular_2_1  angular_2_2  angular_2_3  angular_2_4  angular_2_5  angular_3_1  angular_3_2  angular_3_3  angular_3_4  angular_3_5  angular_4_1  angular_4_2  angular_4_3  angular_4_4  angular_4_5  angular_5_1  angular_5_2  angular_5_3  angular_5_4  angular_5_5
results/frem/glove-25-angular/10/eCP_1_4/: angular_1_1  angular_1_2  angular_1_3  angular_1_4  angular_1_5  angular_2_1  angular_2_2  angular_2_3  angular_2_4  angular_2_5  angular_3_1  angular_3_2  angular_3_3  angular_3_4  angular_3_5  angular_4_1  angular_4_2  angular_4_3  angular_4_4  angular_4_5  angular_5_1  angular_5_2  angular_5_3  angular_5_4  angular_5_5
results/frem/random-xs-20-euclidean/10/eCP_1_0/: euclidean_1_1  euclidean_1_2  euclidean_1_3  euclidean_1_4  euclidean_1_5  euclidean_2_1  euclidean_2_2  euclidean_2_3  euclidean_2_4  euclidean_2_5  euclidean_3_1  euclidean_3_2  euclidean_3_3  euclidean_3_4  euclidean_3_5  euclidean_4_1  euclidean_4_2  euclidean_4_3  euclidean_4_4  euclidean_4_5  euclidean_5_1  euclidean_5_2  euclidean_5_3  euclidean_5_4  euclidean_5_5
results/frem/random-xs-20-euclidean/10/eCP_1_1/: euclidean_1_1  euclidean_1_2  euclidean_1_3  euclidean_1_4  euclidean_1_5  euclidean_2_1  euclidean_2_2  euclidean_2_3  euclidean_2_4  euclidean_2_5  euclidean_3_1  euclidean_3_2  euclidean_3_3  euclidean_3_4  euclidean_3_5  euclidean_4_1  euclidean_4_2  euclidean_4_3  (+7 more)
results/nime/: BallTree(nmslib).html  NGT-onng.html  NGT-panng.html  SW-graph(nmslib).html  annoy.html  bruteforce-blas.html  eCP-release_1_3.html  eCP.html  faiss-ivf.html  fashion-mnist-784-euclidean_10_euclidean.html  flann.html  hnsw(faiss).html  hnsw(nmslib).html  hnswlib.html  index.html  kd.html  kgraph.html  mnist-784-euclidean_10_euclidean.html  mrpt.html  n2.html  puffinn.html  pynndescent.html  random-s-100-euclidean_10_euclidean.html  random-xs-20-angular_10_angular.html  random-xs-20-euclidean_10_euclidean.html  rpforest.html  sptag.html
results/nime_large/: SW-graph(nmslib).html  annoy.html  bruteforce-blas.html  eCP.html  faiss-ivf.html  glove-25-angular_10_angular.html  hnsw(faiss).html  hnswlib.html  index.html  mrpt.html  n2.html  puffinn.html  pynndescent.html  random-xs-20-euclidean_10_euclidean.html  rpforest.html
scripts/: all_install.sh  ann-benchmark.sh  docker_clean.sh  ecp_install.sh  ecp_setup.sh  gen_wrapper.sh  generate_wrapper.sh  local_ecp_setup.sh  run.sh  setup_all.sh  setup_ecp.sh
wrapper/: eCP.i  file_combine.py  interface_gen.py  setup.py
(+100 files in other folders)
